--- a/blockchallenge.css
+++ b/blockchallenge.css
@@ -6,28 +6,50 @@
 }
 
 h1 {
-    position: absolute;
-    left: 600px;
-    align-content: center;
+    float: none;
+    text-align: center;
+    display: block;
+    clear: none;
+}
+
+#headerimage {
+    padding: 10px;
+    float: left;
+}
+
+#headerimage2 {
+    color: #fff;
+    display: initial;
+    float: right;
 }
 
 body {
-    width: 1000px;
+    width: 1100px;
 }
 img {
     height: 100px;
     width: 100px;
     background-color: white;
+    margin: 10px;
+    padding: 10px;
 }
 
-#row {
-    clear: both;
-    display: -ms-inline-grid
-}
-
-#column {
+#column,
+#column2,
+#column4 {
+    height: 150px;
+    width: 150px;
+    display: inline-table;
     float: left;
+    margin: 30 0 0 0;
+    padding: 30 0 0 0;
+}
+
+#picture {
     width: 5%;
     padding: 5px;
     display: inline-table;
+    float: left;
+    margin-top: 10;
+    padding: 30 0 0 0;
 }
