--- a/blockchallenge.css
+++ b/blockchallenge.css
@@ -6,50 +6,57 @@
 }
 
 h1 {
-    float: none;
-    text-align: center;
-    display: block;
-    clear: none;
+    position: absolute;
+    left: 300px;
+    top: 80px;
 }
 
 #headerimage {
-    padding: 10px;
-    float: left;
+    position: absolute;
+    left: 150px;
 }
 
 #headerimage2 {
-    color: #fff;
-    display: initial;
-    float: right;
+    position: absolute;
+    left: 575px;
 }
 
-body {
-    width: 1100px;
+.head {
+    height: 40px;
+    width: 100px;
 }
+
 img {
     height: 100px;
     width: 100px;
     background-color: white;
-    margin: 10px;
-    padding: 10px;
+    float: left;    
 }
 
-#column,
-#column2,
-#column4 {
+#column {
     height: 150px;
-    width: 150px;
-    display: inline-table;
+    width: 120px;
     float: left;
-    margin: 30 0 0 0;
-    padding: 30 0 0 0;
+    margin-top: 100px;
 }
 
-#picture {
-    width: 5%;
-    padding: 5px;
-    display: inline-table;
+#altcolumn {
+    height: 150px;
+    width: 120px;
     float: left;
-    margin-top: 10;
-    padding: 30 0 0 0;
+    margin-top: 100px;
+}
+
+.picture {
+    padding: 1px;
+    background-color: skyblue;
+    margin-top: 50;
+    float: left;
+}
+
+.picture2 {
+    padding: 1px;
+    float: left;
+    background-color: skyblue;
+    margin-top: 50;
 }
