--- a/internet.css
+++ b/internet.css
@@ -1,15 +1,17 @@
-* {
+/* * {
     outline: 1px solid pink;
-}
+} */
 
 #container {
-    background-color: white;
+    background-image: linear-gradient( 190deg,lightgrey, white);
     width: 1000px;
     height: 900px;
 }
 
 mark.red {
     color: red;
+    text-decoration: none;
+
 }
 mark.darkblue {
     color: rgb(52,101,154);
@@ -20,11 +22,14 @@ mark.darkblue {
 .orange {
     color: rgb(225, 132, 42)
 }
-.lightblue {
+mark.lightblue {
     color: rgb(77, 187, 216)
 }
 .darkgrey {
     color: rgb(71,71,71)
+}
+mark {
+    background: none;
 }
 
     #container #top {
@@ -38,21 +43,21 @@ mark.darkblue {
             width: 150px;
             height: 150px;
             display: inline-block;
-            position: fixed;
-            margin-top: 20px;
+            position: static;
+            margin-top: 0px;
         }
 
         #container #top #text {
-            height: 90px;
+            height: 80px;
             width: 300px;;
             display: inline-block;
             vertical-align: top;
-            margin: 60px 0px 0px 150px;
+            margin: 50px 0px 10px 0px;
         }
 
             #container #top #text h1 {
                 display: inline-block;
-                font-size: 40px;
+                font-size: 50px;
             }
             #container #top #titlebar h2 {
                 display: inline-block;
@@ -68,27 +73,27 @@ mark.darkblue {
             }
             
 
-    #left {
-        background-color: green;
+    #container #left {
         width: 250px;
         height: 700px;
         display: inline-block;
         vertical-align: top;
-
+        margin-top: 10px;
     }
 
-        #left #sidetop {
+        #container #left #sidetop {
             height: 100px;
             width: 250px;
             vertical-align: top;
             display: inline-block;
         }
 
-            #left #sidetop #sidetoptext {
+            #container #left #sidetop #sidetoptext {
                 display: inline-block;
                 width: auto;
                 height: auto;
                 margin-left: 5px;
+                padding: 3px;
             }
             h3 {
                 width: 190px;
@@ -101,7 +106,7 @@ mark.darkblue {
                 font-weight: bold;
             }
 
-            #left #sidetop #sidetopbuttons {
+            #container #left #sidetop #sidetopbuttons {
                 width: 250px;
                 height: 110px;
                 vertical-align: top;
@@ -114,7 +119,7 @@ mark.darkblue {
                 height: 20px;
                 text-align: center;
                 padding: 10px;
-                margin: 0px 5px 5px 15px;
+                margin: 0px 5px 5px 10px;
                 border-radius: 10px;
                 color: white;
                 text-decoration: none;
@@ -126,43 +131,226 @@ mark.darkblue {
                 background-color: rgb(225, 132, 42);
             }
             
-        #left #sidebottom {
-            background-color: black;
-            height: 400px;
+        #container #left #sidebottom {
+            background-image: url("Internet_images/ad_background.png");
+            height: 360px;
             width: 250px;
             vertical-align: top;
             display: inline-block;
         }    
 
-            #left #sidebottom h1 {
+            #container #left #sidebottom h1 {
                 color: white;
                 text-align: center;
                 font-size: 30px;
+                vertical-align: top;
+                margin: 20px 0 0 0;
             }
 
-            #left #sidebottom img {
+            #container #left #sidebottom img {
                 display: inline-block;
                 width: auto;
                 height: 150px;
+                vertical-align: top;
+                margin: 0px 0px 10px 70px;
             }
 
-            #left #sidebottom a {
+            #container #left #sidebottom a {
                 display: block;
                 width: 150px;
                 height: 20px;
                 text-align: center;
                 padding: 10px;
-                margin: 0px 5px 5px 35px;
+                margin: 0px 5px 5px 45px;
                 border-radius: 10px;
                 color: white;
                 text-decoration: none;
                 background-color: rgb(77, 187, 216);
             }
 
-    #body {
-        background-color: blue;
-        width: 740px;
+    #container #body {
+        width: 745px;
         height: 700px;
         display: inline-block;
-    
+        margin-top: 10px;
+
     }
+
+        #container #body #dns {
+            display: block;
+            width: 745px;
+            height: 70px;
+        }
+            #body #dns {
+                display: inline-block;
+                border-bottom: 1px solid black;
+            }
+            #body #dns img {
+                width: 30px;
+                height: 30px;;
+                display: inline-block;
+                margin-top: 2px;
+            }
+            #body #dns p {
+                display: inline-block;
+                color: rgb(52,101,154);
+                vertical-align: top;
+                margin: 10px 10px 10px 0px;
+            }
+
+        #body #dns #phone {
+            width: 290px;
+            height: 80px;
+            display: inline-block;
+            margin: -45px 0 0 540px;
+        }
+            #body #dns #phone img {
+                width: 50px;
+                height: 50px;
+                display: inline-block;
+                margin-top: 10px;
+                padding-bottom: 5px;
+            }
+        #body #dns #phone #phonetext {
+            width: 190px;
+            height: 20px;
+            display: inline-block;
+        }
+            #phonetext p {
+                font-size: 12px;
+                font-weight: lighter;
+                width: 150px;
+                display: inline-block;
+                padding: 0 0 0 3px;
+            }
+            #phonetext h3 {
+                margin: -10px 0 0 0px;
+                font-size: 25px;
+                color: rgb(77, 187, 216)
+            }
+            #phonetext h6 {
+                display: inline-block;
+                vertical-align: top;
+                margin: 0 0 0 5px;
+                font-weight: lighter;
+            }      
+
+
+        #container #body #clientsandservers {
+            display: inline-block;
+            vertical-align: top;
+            width: 745px;
+            height: 220px;
+        }
+
+            #container #body #clientsandservers h1 {
+                display: block;
+                color: rgb(52,101,154);
+                text-align: left;
+                font-size: 20px;
+                margin: 0 0 0 0;
+            }
+
+            #container #body #clientsandservers p {
+                display: inline-block;
+                font-size: 16px;
+                text-align: left;
+                vertical-align: top;
+                margin: 0 0 0 0;
+            }
+
+            #container #body #clientsandservers ul {
+                display: inline-block;
+                font-size: 16px;
+                text-align: left;
+                vertical-align: top;
+                margin: 0 0 0 0;
+            }
+
+            #container #body #clientsandservers img {
+                display: inline-block;
+                vertical-align: top;
+                width: 200px;
+                height: auto;
+                margin: 0px 0 0 270px;
+            }
+
+        #container #body #whatactually {
+            display: inline-block;
+            vertical-align: top;
+            width: 745px;
+            height: 170px;
+            margin-top: 10px;
+            padding: 3px;
+        }
+
+            #container #body #whatactually   h1 {
+                display: block;
+                color: rgb(52,101,154);
+                text-align: left;
+                font-size: 20px;
+                margin: 0 0 -10px 0;
+            }
+
+            #container #body #whatactually ol {
+                display: inline-block;
+                font-size: 16px;
+                text-align: left;
+                vertical-align: top;
+                margin: -10px 0 5px 5px;
+                padding: 25px;
+            }
+
+        #container #body #big3 {
+            display: inline-block;
+            vertical-align: top;
+            width: 745px;
+            height: 200px;
+        }
+
+        #container #body #big3 h1 {
+            display: inline-block;
+            color: rgb(52,101,154);
+            text-align: left;
+            font-size: 25px;
+            margin: 20px 0 30px 0;
+        }
+
+        #container #body #big3 #big3text {
+            display: inline-block;
+            width: 525px;
+            height: 125px;
+            vertical-align: top;
+            margin: -190px 0 50px 210px;
+            padding: 10px 0 0 0;
+        }
+
+            #container #body #big3 p {
+                display: inline-block;
+                font-size: 16px;
+                width: auto;
+                height: auto;
+                vertical-align: top;
+                margin: -20px 0 25px 0;
+            }
+
+            #container #body #big3 a {
+                display: inline-block;
+                font-size: 18px;
+                width: auto;
+                height: auto;
+                vertical-align: top;
+                margin: -32px 0 0 -9px;
+            }
+        
+
+        #container #body #big3 img {
+            position: static;
+            display: inline-block;
+            vertical-align: top;
+            width: 200px;
+            height: auto;
+            margin: 10px 0 0 0;
+        }
+
+        
