--- a/blockchallenge/blockchallenge.css
+++ b/blockchallenge/blockchallenge.css
@@ -1,69 +1,130 @@
-/*CSS reset settings here*/
-*{
+/* * {
+    outline: 1px solid pink;
+} */
+
+#container {
+    width: 900px;
+    height: 900px;
     margin: 10px;
-    padding: 10px;
-    background: beige;
+    padding-right: 90px;
+    background-color: beige;
 }
 
-h1 {
-    position: absolute;
-    left: 340px;
-    top: 80px;
-}
+    #container #top {
+        display: inline-block;
+        width: 1000px;
+        height: 100px;
+        margin: 50px 0 0 0;
+    }
 
-#headerimage {
-    position: absolute;
-    left: 190px;
-}
+        #container #top .pic1 {
+            width: 150px;
+            height: 75px;
+            vertical-align: top;
+            display: inline-block;
+            margin: 25px 0 0 175px;
+        }
+    
+        #container #top h1 {
+            display: inline-block;
+            text-align: center;
+            font-size: 40px;
+            margin: 60px 0 0 10px;
+        }
 
-#headerimage2 {
-    position: absolute;
-    left: 615px;
-    background-color: transparent;
+        #container #top .pic2 {
+            width: 150px;
+            height: 75px;
+            vertical-align: top;
+            display: inline-block;
+            margin-top: 25px;
+        }
 
-}
-
-.head {
-    height: 40px;
-    width: 100px;
-    background-color: transparent;
-
-}
-
-
-img {
-    height: 100px;
-    width: 100px;
-    float: left;    
-    background-color: red;
-
-}
-
-#column {
-    height: 150px;
-    width: 120px;
+    #container #body {
     display: inline-block;
-    margin-top: 100px;
-}
+    width: 960px;
+    height: 800px;
+    margin: 20px 20px;
+    padding-left: 0;
+    }
 
-#altcolumn {
-    height: 150px;
-    width: 120px;
-    float: left;
-    margin-top: 100px;
-}
+    #container #body #column1 {
+        display: inline-block;
+        height: 500px;
+        width: 100px;
+        margin: 20px;
+    }
+        #container #body #column1 img {
+            background-color: rgb(136,206,233);
+            display: inline-block;
+            padding: 10px;
+            width: 120px;
+            height: 120px;
+            border: 5px solid black;
+            margin: 5px 5px 5px 50px;
+        }
 
-.picture {
-    padding: 1px;
-    background-color: red;
-    margin-top: 50;
-    float: left;
-}
+    #container #body #column2 {
+        display: inline-block;
+        height: 500px;
+        width: 100px;
+        margin: 20px;
+    }
+        #container #body #column2 img {
+            background-color: lightcoral;
+            display: inline-block;
+            padding: 10px;
+            width: 120px;
+            height: 120px;
+            border: 5px solid black;
+            margin: 5px 5px 5px 70px;
+        }
 
-.picture2 {
-    padding: 1px;
-    float: left;
-    background-color: skyblue;
-    margin-top: 50;
-    position: static;
-}
+    #container #body #column3 {
+        display: inline-block;
+        height: 500px;
+        width: 100px;
+        margin: 20px;
+    }
+        #container #body #column3 img {
+            background-color: rgb(136,206,233);
+            display: inline-block;
+            padding: 10px;
+            width: 120px;
+            height: 120px;
+            border: 5px solid black;
+            margin: 5px 5px 5px 90px;
+        }
+
+    #container #body #column4 {
+        display: inline-block;
+        height: 500px;
+        width: 100px;
+        margin: 20px;
+    }
+        #container #body #column4 img {
+            background-color: lightcoral;
+            display: inline-block;
+            padding: 10px;
+            width: 120px;
+            height: 120px;
+            border: 5px solid black;
+            margin: 5px 5px 5px 110px;
+        }
+
+    #container #body #column5 {
+        display: inline-block;
+        height: 500px;
+        width: 100px;
+        margin: 20px;
+    }
+        #container #body #column5 img {
+            background-color: rgb(136,206,233);
+            display: inline-block;
+            padding: 10px;
+            width: 120px;
+            height: 120px;
+            border: 5px solid black;
+            margin: 5px 5px 5px 130px;
+        }
+    
